<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--添加下面2个属性，软键盘弹出时才会一起把listview顶上去-->
        <!--android:transcriptMode="normal"
            android:fastScrollEnabled="true"-->
        <ListView
            android:id="@+id/rlv_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:fastScrollEnabled="true"
            android:scrollbars="none"
            android:transcriptMode="normal">

        </ListView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--回复某个人的view-->
        <LinearLayout
            android:id="@+id/ll_reply_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_rect"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_reply_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:text=""
                android:textColor="#FE3533"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_reply_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:text=""
                android:textColor="#999999"
                android:textSize="13sp" />

        </LinearLayout>

        <!--        聊天区域-->
        <LinearLayout
            android:id="@+id/ll_chat_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--    分割线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EEEEEE" />

            <!--        聊天输入框-->
            <LinearLayout
                android:id="@+id/ll_input_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_send_voice"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="4dp"
                    app:srcCompat="@drawable/selector_src_voice" />

                <net.mfinance.chatlib.view.EmojiEditText
                    android:id="@+id/edt_chat_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_whiteee_corner2"
                    android:gravity="center_vertical"
                    android:hint="@string/str_input_new_msg"
                    android:maxHeight="80dp"
                    android:minHeight="34dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="4dp"
                    android:text=""
                    android:textColor="#333333"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:visibility="visible" />

                <net.mfinance.chatlib.view.AudioRecorderTextView
                    android:id="@+id/tv_record_voice"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_voice_record"
                    android:gravity="center"
                    android:text="@string/str_recorder_normal"
                    android:textColor="#999999"
                    android:textSize="13sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_send_emoji"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/selector_iv_choice_emoji"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_send_file"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/src_choice_img_unpressed" />

                <TextView
                    android:id="@+id/tv_send_msg"
                    android:layout_width="48dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/bg_orange_corner2"
                    android:gravity="center"
                    android:text="@string/str_send"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:visibility="gone" />

            </LinearLayout>

            <!--        选择图片、视频、拍照等-->
            <LinearLayout
                android:id="@+id/ll_choice_file"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:visibility="gone">

                <!--    分割线-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <!--                图片太大，用imgaeview-->
                    <LinearLayout
                        android:id="@+id/ll_choice_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/src_choice_camera">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/str_camera"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_choice_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/src_choice_image">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/str_image"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_choice_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/src_choice_video">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/str_video"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_choice_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ease_chat_location_normal">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/location"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_voice_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/em_chat_voice_call_normal">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/voice_call"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_choice_other1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/src_choice_image">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/str_image"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_choice_other2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/src_choice_video">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/str_video"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_choice_other3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ease_chat_location_normal">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/location"
                            android:textColor="#333333"
                            android:textSize="13sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--        emoji显示-->
            <LinearLayout
                android:id="@+id/ll_choice_emoji"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:visibility="gone">

                <!--    分割线-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#EEEEEE" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_emoji"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:visibility="visible" />

                <!--            根据viewpager的页数显示个数-->
                <LinearLayout
                    android:id="@+id/ll_emoji_dot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_emoji_dot_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/selector_choice_point_emoji" />

                    <ImageView
                        android:id="@+id/iv_emoji_dot_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        app:srcCompat="@drawable/selector_choice_point_emoji" />

                    <ImageView
                        android:id="@+id/iv_emoji_dot_third"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        app:srcCompat="@drawable/selector_choice_point_emoji" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>